@@ -1,5 +1,11 @@
 2005-08-15  Oliver Schwartz <Oliver.Schwartz@gmx.de>
 
+	* backend/snapscan.c: Bumped version number
+	* backend/snapscan-scsi.c: Added temporary debug code for 2480/2580
+          distinction
+        
+2005-08-15  Oliver Schwartz <Oliver.Schwartz@gmx.de>
+
 	* backend/snapscan.c backend/snapscan-options.c backend/snapscan-scsi.c
 	  backend/snapscan.h doc/descriptions/snapscan.desc 
 	  backend/snapscan.conf: Added support for Epson Perfection 3490/3590 
